fix overflow css error

--- a/public/style/app.css
+++ b/public/style/app.css
@@ -1,6 +1,7 @@
-*{
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -95,17 +96,14 @@ h2 {
 
 .sidebar {
   background-color: #547AA5;
-  height: 100vh;
 }
 
 .sidebar-content {
-  float: none;
   display: block;
   padding: 10px;
 }
 
 .sidebar-header {
-  font-size: 5vh;
   font-weight: normal;
   padding-right: 20px;
 }
